apps/spoolman/spoolman/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spoolman
  labels:
    app: spoolman
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spoolman
  template:
    metadata:
      labels:
        app: spoolman
    spec:
      containers:
        - name: spoolman
          image: ghcr.io/donkie/spoolman:0.27.0 # Do I still need to run my own version?
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: "200m"
              memory: "256Mi"
            requests:
              cpu: "25m"
              memory: "128Mi"
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: spoolman-mount
              mountPath: /home/app/.local/share/spoolman
      volumes:
        - name: spoolman-mount
          persistentVolumeClaim:
            claimName: spoolman-data
      #imagePullSecrets:
      #  - name: harbor.tryy3.dev-registry
---
apiVersion: v1
kind: Service
metadata:
  name: spoolman-svc
spec:
  selector:
    app: spoolman
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
